Fix more warnings and do some small optimizations